# Ewok-Planner

./: README.md
ewok/ewok_optimization/include/ewok/: uniform_bspline_3d_optimization.h
ewok/ewok_optimization/src/: spline_optimization_example.cpp  spline_optimization_example2.cpp  spline_optimization_example3.cpp
ewok/ewok_optimization/test/: uniform-bspline-3d-optimization-test.cpp
ewok/ewok_ring_buffer/include/ewok/: ed_ring_buffer.h
ewok/ewok_ring_buffer/src/: ring_buffer_example.cpp  tum_rgbd_ring_buffer_example.cpp
ewok/ewok_simulation/: CMakeLists.txt  package.xml
ewok/ewok_simulation/include/: bspline_lee_position_controller_node.h
ewok/ewok_simulation/launch/: controller.launch  gps.launch  pubCam.launch  trajectory_replanning_gps.launch  trajectory_replanning_rishabh.launch  trajectory_replanning_rishabh.launch.save  trajectory_replanning_simulation.launch
ewok/ewok_simulation/rviz/: simulation_rishabh.rviz
ewok/ewok_simulation/src/: bspline_controller_rishabh.cpp  bspline_lee_position_controller_node.cpp  offboard_sub.py  trajectory_replanning_example.cpp  trajectory_replanning_example_pointCloud.cpp  trajectory_replanning_rishabh.cpp
